# soft-sys

./: .gitignore  2.3-server.sh  A2.2.html  A2.3-lib.js  A2.3.css  A2.3.html  A2.3.js  Dockerfile  README.md  abgabe.txt  build.ts  docker-compose.yml  docs.md  gen-self-signed-cert.sh  package.json  pnpm-lock.yaml  script.ts  tsconfig.json
backend/: .gitignore  Cargo.toml  migrate.sh
backend/migrations/: 20250607130832_init.sql
backend/src/: error.rs  main.rs  models.rs
backend/src/auth/: jwt.rs
backend/src/axum_app/: axum.rs  error.rs  mod.rs  models.rs  transformers.rs
backend/src/axum_app/routes/: auth.rs  canvas.rs  mod.rs  router.rs
backend/src/routes/: auth.rs  canvas.rs  mod.rs
backend/src/shared/: jwt.rs  mod.rs
backend/src/wsocket_app/: canvas_fwd.rs  canvas_ws.rs  mod.rs  wsocket.rs
backend/src/wtransport_app/: mod.rs
drawer/: context.ts  drawer.ts  events.ts  index.html  index.ts  live-server.cjs  package.json  shape-factories.ts  shapes.ts  tsconfig.json
frontend/: build.js  index.html  index.ts  live-server.cjs  package.json  pnpm-lock.yaml  shape-factories.ts  shapes.ts  tsconfig.json
frontend/src/: auth.ts  canvasPage.ts  context.ts  globals.d.ts  index.ts  navbar.ts  router.ts
frontend/src/drawer/: drawer.ts  events.ts  shape-factories.ts  shapes.ts  wsocket-event.ts  wtrans-event.ts
frontend/src/pages/: canvasPage.ts  homePage.ts  loginPage.ts  registerPage.ts  userInfoPage.ts
frontend/src/services/: wtransport.ts
frontend/static/: context.css  style.css
public/: hallo.html  index.html
src/: index.ts
src/client/: index.html
src/client/assets/: app.js
