[package]
name = "backend"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "any",
    "json",
] }
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
dotenv = "0.15.0"
anyhow = "1.0.98"
futures = "0.3.31"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
log = "0.4.27"
